--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="logo-container">
               <!-- 图片LOGO -->
-              <img src="your-logo-image.png" 
+              <img src="vcuni.png" 
                    alt="Vcuni Systems 标志" 
                    class="logo-image"
                    onerror="this.src='fallback-logo.png'; this.alt='Vcuni Systems'">          
