--- a/index.html
+++ b/index.html
@@ -54,10 +54,6 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <div class="nav-logo">
-                <span class="logo-icon">V</span>
-                <span class="logo-text">Vcuni Systems</span>
-            </div>
             <div class="logo-container">
               <!-- 图片LOGO -->
               <img src="vcuni.png" 
@@ -392,7 +388,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>电话咨询</h4>
-                            <p>400-888-8888</p>
+                            <p>186-7562-4319</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -401,7 +397,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>公司地址</h4>
-                            <p>北京市朝阳区科技创新中心</p>
+                            <p>中国香港</p>
                         </div>
                     </div>
                 </div>
@@ -434,9 +430,14 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <div class="footer-logo">
-                        <span class="logo-icon">V</span>
-                        <span class="logo-text">Vcuni Systems</span>
+                    <div class="logo-container">
+                      <!-- 图片LOGO -->
+                      <img src="vcuni.png" 
+                           alt="Vcuni Systems 标志" 
+                           class="logo-image"
+                           onerror="this.src='fallback-logo.png'; this.alt='Vcuni Systems'">          
+                      <!-- 可选：如果需要保留文字标识作为补充 -->
+                      <span class="logo-text">Vcuni Systems</span>
                     </div>
                     <p>科技洞察健康根基，人文守护生命之光</p>
                 </div>
